--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Cookie|Roboto+Mono:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <title>INFiltros</title>
+    <title>INFiltro</title>
 </head>
 <body>
     <div id="canvas_container">
