--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         Arraste uma imagem aqui ;)
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
 <script src="filtros.js"></script>
 <script src="main.js"></script>
 </html>
